// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre el componente <GifGrid /> Debe de mostar items cuando se cargan imágenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="http://locakhost/culaquier/cosa.jpg"
    />
    <GifGridItem
      id="BFS"
      key="BFS"
      title="cualquier otra cosa"
      url="http://locakhost/culaquier/otracosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas sobre el componente <GifGrid /> Debe mostrar el componente correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
